force-app/main/default/objects/Gift_Aid_Submission__c/Gift_Aid_Submission__c.object-meta.xml
<CustomObject>
    <label>Gift Aid Submission</label>
    <nameField>
        <displayFormat>GAS-{000000}</displayFormat>
        <label>Gift Aid Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Aid Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>