force-app/main/default/objects/Gift_Aid_Submission__c/fields/Gift_Aid_Polling_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Polling_Status__c</fullName>
    <label>Gift Aid Polling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>