force-app/main/default/objects/Gift_Aid_Submission__c/fields/Polling_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Polling_Error_Description__c</fullName>
    <label>Polling Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>