force-app/main/default/objects/Gift_Aid_Submission__c/fields/Polling_Response__c.field-meta.xml
<CustomField>
    <fullName>Polling_Response__c</fullName>
    <label>Polling Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>