force-app/main/default/objects/Gift_Aid_Submission__c/fields/Submission_Number__c.field-meta.xml
<CustomField>
    <fullName>Submission_Number__c</fullName>
    <label>Submission Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>