force-app/main/default/objects/Gift_Aid_Submission__c/fields/Submission_Response__c.field-meta.xml
<CustomField>
    <fullName>Submission_Response__c</fullName>
    <label>Submission Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>