force-app/main/default/objects/Gift_Aid_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Submission_Date__c</columns>
    <columns>Submission_Number__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Gift_Aid_Polling_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>